2005-03-31  Janis Johnson  <janis187@us.ibm.com>

	* g++.dg/other/static11.C: Use cleanup-rtl-dump.

	* g++.dg/parse/repo1.C: Use cleanup-repo-files.
	* g++.dg/template/repo1.C: Ditto.
	* g++.dg/template/repo2.C: Ditto.
	* g++.dg/template/repo3.C: Ditto.
	* g++.old-deja/g++.pt/instantiate4.C: Ditto.
	* g++.old-deja/g++.pt/instantiate6.C: Ditto.
	* g++.old-deja/g++.pt/repo1.C: Ditto.
	* g++.old-deja/g++.pt/repo2.C: Ditto.
	* g++.old-deja/g++.pt/repo3.C: Ditto.
	* g++.old-deja/g++.pt/repo4.C: Ditto.

	* gcc.dg/20020201-1.c: Use cleanup-coverage_files.
	* gcc.dg/20030107-1.c: Ditto.
	* gcc.dg/20030702-1.c: Ditto.
	* gcc.dg/profile-generate-1.c: Ditto.
	* g++.dg/other/profile1.C: Ditto.
	* g++.old-deja/g++.robertl/eb83.C: Ditto.

	* lib/gcc-dg.exp (remove-build-file): New.
	(cleanup-coverage-files, cleanup-repo-files, cleanup-rtl-dump,
	cleanup-tree-dump, cleanup-saved-temps): New.

2005-03-31  Nathan Sidwell  <nathan@codesourcery.com>

	PR c++/19203, DR 214
	* g++.dg/parse/ambig3.C: Not ambiguous.
	* g++.dg/template/spec20.C: New.
	* g++.dg/template/spec21.C: New.

2005-03-31  Steve Ellcey  <sje@cup.hp.com>

	PR target/20045
	* gcc.dg/ia64-fptr-1.c: Run only on linux.

2005-03-31  Francois-Xavier Coudert  <coudert@clipper.ens.fr>

	PR libfortran/20660
	* gfortran.dg/negative_unit.f: New test.

2005-03-31 Mostafa Hagog <mustafa@il.ibm.com>

	* gcc.dg/20050330-1.c: New test.

2005-03-30  Devang Patel  <dpatel@apple.com>

	* g++.dg/tree-sra/ssa-sra-3.C: New test.

2005-03-30  Dale Johannesen  <dalej@apple.com>

	* gcc.dg/20020919-1.c:  Remove unnecessary conditional.

2005-03-30  Janis Johnson  <janis187@us.ibm.com>

	* lib/scantree.exp (scan-tree-dump, scan-tree-dump-times,
	scan-tree-dump-not, scan-tree-dump-dem, scan-tree-dump-dem-not):
	Strip options from test name.

2005-03-31  Jan Hubicka  <jh@suse.cz>

	* gcc.dg/varpool-1.c: New testcase.

2005-03-30  Joseph S. Myers  <joseph@codesourcery.com>

	PR c/772
	PR c/17913