@@ -14,3 +14,5 @@ int main ()
   double d = glue (1.0e, +1); /* { dg-error "exponent|parse error|syntax error|expected" } */
   return 0;
 }
+
+/* { dg-final { cleanup-saved-temps } } */
