@@ -5,3 +5,5 @@
 #endif
 #include <stddef.h>
 int x;
+
+/* { dg-final { cleanup-saved-temps } } */
